Fixed input positioning when error message visible

--- a/src/containers/MakeABid/MakeABid.module.css
+++ b/src/containers/MakeABid/MakeABid.module.css
@@ -98,7 +98,7 @@
 
 .InputWrapper form {
 	display: flex;
-	justify-content: center;
+	flex-direction: column;
 }
 
 .Inputs {
